@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: amrecover.c,v 1.7.2.2 2006/12/12 14:56:38 martinea Exp $
+ * $Id: amrecover.c,v 1.7.2.3 2007/02/22 18:28:35 martinea Exp $
  *
  * an interactive program for recovering backed-up files
  */
@@ -294,7 +294,7 @@ guess_disk (
 	/*NOTREACHED*/
     }
     cwd_length = strlen(cwd);
-    dbprintf(("guess_disk: %zu: \"%s\"\n", cwd_length, cwd));
+    dbprintf(("guess_disk: " SSIZE_T_FMT ": \"%s\"\n", cwd_length, cwd));
 
     if (open_fstab() == 0) {
 	return -1;
@@ -304,7 +304,7 @@ guess_disk (
     while (get_fstab_nextentry(&fsent))
     {
 	current_length = fsent.mntdir ? strlen(fsent.mntdir) : (size_t)0;
-	dbprintf(("guess_disk: %zu: %zu: \"%s\": \"%s\"\n",
+	dbprintf(("guess_disk: " SSIZE_T_FMT ": " SSIZE_T_FMT": \"%s\": \"%s\"\n",
 		  longest_match,
 		  current_length,
 		  fsent.mntdir ? fsent.mntdir : "(mntdir null)",
